--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,422 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+/* ====== Responsive ====== */
+@media only screen and (max-width: 768px) {
+    /* ====== Sidebar ====== */
+    #sidebar {
+        width: 100% !important;
+    }
 }
 
+body {
+    background: #f8f9fa;
+    margin: 0;
+    padding: 0;
+    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/* ====== Typo ====== */
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+    font-size: 14px;
+}
+
+/* ====== Form ====== */
+input, textarea {
+    padding: 1rem !important;
+    resize: none;
+}
+
+button {
+    font-weight: bold !important;
+    padding: 0.5rem 1.5rem !important;
+    border-radius: 100px !important;
+}
+
+/*button:focus {*/
+    /*outline: none;*/
+    /*box-shadow: none !important;*/
+/*}*/
+
+/* ====== Custom Classes ====== */
+.shadow {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25) !important;
+}
+
+.mask {
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
+}
+
+.border-dashed {
+    border-style: dashed !important;
+}
+
+.border-top-dashed {
+    border-top-style: dashed !important;
+}
+
+.border-bottom-dashed {
+    border-bottom-style: dashed !important;
+}
+
+.border-left-dashed {
+    border-left-style: dashed !important;
+}
+
+.border-right-dashed {
+    border-right-style: dashed !important;
+}
+
+.y-min-1px {
+    transform: translateY(1px);
+}
+
+.y-min-2px {
+    transform: translateY(2px);
+}
+
+.y-min-3px {
+    transform: translateY(3px);
+}
+
+.mx-min-15px {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.font-size-14px {
+    font-size: 14px;
+}
+
+.btn-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    padding: 0 !important;
+    border-radius: 50%;
+}
+
+.btn-circle.btn-lg {
+    width: 60px;
+    height: 60px;
+}
+
+.btn-circle.btn-xl {
+    width: 80px;
+    height: 80px;
+}
+
+.form-options label {
+    font-weight: bold;
+    padding: 1rem !important;
+    border-radius: 4px !important;
+    border-color: #ced4da;
+    color: rgba(0,0,0,0.25);
+}
+
+.form-options label.active {
+    background: #ff9800 !important;
+    color: #fff !important;
+}
+
+/* Button Floating */
+.jumbotron .btn-floating {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    right: 0;
+    margin: 0 3rem;
+    transform: translateY(50%);
+}
+
+.card form .btn-floating {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+/* ====== Redefined Classes ====== */
+.form-control {
+    height: unset;
+}
+
+.bootstrap-select button,
+.bootstrap-select button.dropdown-toggle {
+    background: #fff !important;
+    font-weight: normal !important;
+    padding: 1rem !important;
+    border: 1px solid #ced4da;
+    border-radius: 4px !important;
+}
+
+.bootstrap-select input {
+    height: calc(2.25rem + 2px);
+}
+
+.bootstrap-select .dropdown-menu {
+    padding: 0;
+    padding-bottom: 0.5rem;
+}
+
+.bootstrap-select .dropdown-menu .bs-searchbox {
+    padding: 0.5rem;
+}
+
+.bootstrap-select .dropdown-menu .dropdown-item {
+    font-weight: bold;
+}
+
+/*.bootstrap-select .dropdown-menu .dropdown-item:hover,*/
+/*.bootstrap-select .dropdown-menu .dropdown-item:focus {*/
+    /*background: rgba(0,0,0,0.05);*/
+/*}*/
+
+/*.bootstrap-select .dropdown-menu .dropdown-item.active,*/
+/*.bootstrap-select .dropdown-menu .dropdown-item:active {*/
+    /*background: rgba(0,0,0,0.1);*/
+    /*color: #333;*/
+/*}*/
+
+/*.bootstrap-select .dropdown-menu .dropdown-item.active::before {*/
+    /*content: "";*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*background: #ff9800;*/
+    /*width: 3px;*/
+    /*height: 100%;*/
+/*}*/
+
+.jumbotron {
+    position: relative;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    border-radius: 0;
+    padding: 3rem;
+}
+
+.card {
+    overflow: visible !important;
+}
+
+.rounded {
+    border-radius: 1rem !important;;
+    overflow: hidden;
+}
+
+.rounded-top {
+    -moz-border-radius-topleft: 1rem !important;
+    -moz-border-radius-topright: 1rem !important;
+    overflow: hidden;
+}
+
+.border-bottom {
+    border-color: rgba(0, 0, 0, 0.1) !important;
+}
+
+.btn-link:hover {
+    text-decoration: none;
+}
+
+.bg-primary {
+    background: #6f42c1 !important;
+}
+
+.btn-primary {
+    background: #6f42c1 !important;
+    border-color: #6f42c1 !important;
+}
+
+.text-primary {
+    color: #6f42c1 !important;
+}
+
+.btn-secondary {
+    background: #ff9800 !important;
+    border-color: #ff9800 !important;
+}
+
+.btn-outline-secondary {
+    color: #ff9800 !important;
+    border-color: #ff9800 !important;
+}
+
+.btn-outline-secondary:hover,
+.btn-outline-secondary:active {
+    color: #fff !important;
+    background: #ff9800 !important;
+}
+
+/*[class *= "btn-outline-"]:hover {*/
+    /*transform: translateY(-1px);*/
+    /*box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);*/
+/*}*/
+
+/*[class *= "btn-outline-"]:active {*/
+    /*transform: translateY(0);*/
+    /*box-shadow: none;*/
+/*}*/
+
+.text-secondary {
+    color: #ff9800 !important;
+}
+
+/* ====== Navbar ====== */
+#navbar {
+    z-index: 99;
+    padding-top: 0;
+    padding-bottom: 0;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25) !important;
+}
+
+#navbar .navbar-brand {
+    font-weight: bold;
+}
+
+#navbar .navbar-nav > li > a {
+    position: relative;
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: bold;
+    padding: 1rem 1.5rem;
+}
+
+#navbar .navbar-nav > li > a:hover {
+    color: #fff;
+}
+
+#navbar .navbar-nav > li > a.active {
+    color: #fff;
+    background: rgba(0, 0, 0, 0.05);
+}
+
+#navbar .navbar-nav .dropdown .dropdown-menu {
+    left: unset;
+    right: 0;
+}
+
+#navbar .navbar-nav .dropdown .dropdown-menu .dropdown-item {
+    font-weight: bold;
+}
+
+#navbar .navbar-nav li a.active::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #ff9800;
+    width: 100%;
+    height: 3px;
+}
+
+#navbar .navbar-toggler {
+    padding: 0 !important;
+    border: 0;
+    height: 56px;
+}
+
+#navbar .navbar-toggler:hover {
+    color: #fff;
+}
+
+/* ====== Sidebar ====== */
+#sidebar {
+    position: fixed;
+    z-index: 99;
+    background: #444;
+    width: 25%;
+    height: 100%;
+}
+
+#sidebar .sidebar-profile {
+    height: 179px;
+    background: rgba(0, 0, 0, 0.1);
+    /*border-bottom: 1px solid rgba(0,0,0,0.2);*/
+}
+
+#sidebar .sidebar-nav li a {
+    position: relative;
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: bold;
+    padding: 1rem 1.5rem;
+    /*border-bottom: 1px solid rgba(0,0,0,0.2);*/
+}
+
+#sidebar .sidebar-nav li a:hover {
+    color: #fff;
+}
+
+#sidebar .sidebar-nav li a.active {
+    background: rgba(0, 0, 0, 0.05);
+    color: #fff;
+}
+
+#sidebar .sidebar-nav li a.active::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #ff9800;
+    width: 3px;
+    height: 100%;
+}
+
+/* Dashboard */
+#dashboard .dashboard-content .dashboard-item .card-img-top {
+    height: 150px;
+    overflow: hidden;
+}
+
+/* Reviews */
+#reviews .review-list .review-item .card-body {
+    position: relative;
+}
+
+/*#reviews .review-list .review-item .card-body::after,*/
+/*#reviews .review-list .review-item .card-body::before {*/
+/*content: "";*/
+/*position: absolute;*/
+/*top: -20px;*/
+/*left: 35px;*/
+/*border: 10px solid transparent;*/
+/*border-bottom-color: #fff;*/
+/*}*/
+
+/*#reviews .review-list .review-item .card-body::before {*/
+/*top: -21px;*/
+/*border-bottom-color: #dee2e6;*/
+/*}*/
+
+#create-review .jumbotron {
+    padding-bottom: 6rem;
+}
+
+#create-review .create-review-form .card {
+    margin-top: -6rem;
+}
+
+/* ====== Auth ====== */
+#signin .jumbotron,
+#signup .jumbotron {
+    padding-bottom: 6rem;
+}
+
+#signin .signin-form .card,
+#signup .signup-form .card {
+    margin-top: -6rem;
+}
+
+/* ====== Teachers ====== */
+#teachers .teacher-list  .teacher-item:nth-last-child(1) .card-body {
+    border-bottom: 0 !important;
 }
