--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ p {
     font-size: 14px;
 }
 
+sup {
+    top: -.66em;
+}
+
 /* ====== Form ====== */
 input, textarea {
     padding: 1rem !important;
@@ -47,6 +51,10 @@ button {
 /*}*/
 
 /* ====== Custom Classes ====== */
+.x-small {
+    font-size: 12px !important;
+}
+
 .shadow {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25) !important;
 }
@@ -216,8 +224,8 @@ button {
 }
 
 .rounded-top {
-    -moz-border-radius-topleft: 1rem !important;
-    -moz-border-radius-topright: 1rem !important;
+    border-top-left-radius: 1rem !important;
+    border-top-right-radius: 1rem !important;
     overflow: hidden;
 }
 
